// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Coupon /> renders correctly with error state 1`] = `
<div
  className="coupon mb-3 mb-lg-2 rounded border border-danger"
>
  <div
    aria-controls="coupon-details-1"
    aria-expanded={false}
    className="metadata row no-gutters p-2 d-flex align-items-center rounded"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
    >
      <small
        className="text-muted"
      >
        Coupon Name
      </small>
      <div>
        Test Coupon
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid From
          </small>
          <div>
            June 1, 2018
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid To
          </small>
          <div>
            February 1, 2019
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Assignments Remaining
          </small>
          <div>
            0
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Enrollments Redeemed
          </small>
          <div>
            0 of 1
            <span
              className="ml-1"
            >
              (0%)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
    >
      <span
        className="pgn__icon text-danger mr-2 d-inline-block"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2Zm1 15h-2v-2h2v2Zm0-4h-2V7h2v6Z"
            fill="currentColor"
          />
        </svg>
        <span
          className="sr-only"
        >
          Coupon has an error.
        </span>
      </span>
      <span
        className="pgn__icon d-inline-block text-primary"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
        <span
          className="sr-only"
        >
          Open coupon details
        </span>
      </span>
    </div>
  </div>
  <div
    className="coupon-details row no-gutters px-2 my-3 d-none"
    id="coupon-details-1"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<Coupon /> renders correctly with max uses 1`] = `
<div
  className="coupon mb-3 mb-lg-2 rounded border"
>
  <div
    aria-controls="coupon-details-1"
    aria-expanded={false}
    className="metadata row no-gutters p-2 d-flex align-items-center rounded"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
    >
      <small
        className="text-muted"
      >
        Coupon Name
      </small>
      <div>
        Test Coupon
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid From
          </small>
          <div>
            June 1, 2018
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid To
          </small>
          <div>
            February 1, 2019
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Assignments Remaining
          </small>
          <div>
            0
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Enrollments Redeemed
          </small>
          <div>
            0 of 1
            <span
              className="ml-1"
            >
              (0%)
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
    >
      <span
        className="pgn__icon d-inline-block text-primary"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
        <span
          className="sr-only"
        >
          Open coupon details
        </span>
      </span>
    </div>
  </div>
  <div
    className="coupon-details row no-gutters px-2 my-3 d-none"
    id="coupon-details-1"
  >
    <div
      className="col"
    />
  </div>
</div>
`;

exports[`<Coupon /> renders correctly without max uses 1`] = `
<div
  className="coupon mb-3 mb-lg-2 rounded border"
>
  <div
    aria-controls="coupon-details-1"
    aria-expanded={false}
    className="metadata row no-gutters p-2 d-flex align-items-center rounded"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex="0"
  >
    <div
      className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
    >
      <small
        className="text-muted"
      >
        Coupon Name
      </small>
      <div>
        Test Coupon
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid From
          </small>
          <div>
            June 1, 2018
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Valid To
          </small>
          <div>
            February 1, 2019
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
    >
      <div
        className="row no-gutters"
      >
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Assignments Remaining
          </small>
          <div>
            0
          </div>
        </div>
        <div
          className="col"
        >
          <small
            className="text-muted"
          >
            Enrollments Redeemed
          </small>
          <div>
            0
          </div>
        </div>
      </div>
    </div>
    <div
      className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
    >
      <span
        className="pgn__icon d-inline-block text-primary"
      >
        <svg
          aria-hidden={true}
          fill="none"
          focusable={false}
          height={24}
          role="img"
          viewBox="0 0 24 24"
          width={24}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6-1.41-1.41Z"
            fill="currentColor"
          />
        </svg>
        <span
          className="sr-only"
        >
          Open coupon details
        </span>
      </span>
    </div>
  </div>
  <div
    className="coupon-details row no-gutters px-2 my-3 d-none"
    id="coupon-details-1"
  >
    <div
      className="col"
    />
  </div>
</div>
`;
